Fixed x-overflow

--- a/Individual-Works/skopek-2k-web-figma-1/styles/_global.scss
+++ b/Individual-Works/skopek-2k-web-figma-1/styles/_global.scss
@@ -3,7 +3,8 @@ $primary: #F8F7EC;
 $contact-form-color: #ccc9c5;
 $default-font: 'Hubballi';
 body {
-    width: 100%;
+    overflow-x: hidden;
+    width: 100vw;
     position: relative;
     background-color: $primary;
     padding-bottom: 80px;
